welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
  if (color==Color.green){
  ^