welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  avance()
  var color=getCouleurSol()
  recule()
  if (color==Color.green){
    return true
  }
    // Write your code here
}